fixed login and signup form alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,27 +1,27 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
-  font-family: 'Purista-Bold', sans-serif;
-  padding: 0;
-  margin: 0;
-  background-color: black;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
+	font-family: "Purista-Bold", sans-serif;
+	padding: 0;
+	margin: 0;
+	background-color: black;
+
+	height: 100%;
+	width: 100%;
 }
 
 html {
-  padding: 0;
-  margin: 0;
-  height:100%;
-  line-height: 1.15;
+	padding: 0;
+	margin: 0;
+	height: 100%;
+	line-height: 1.15;
 }
 
-
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
